adding screens logic

--- a/LePong/LePong.vcxproj
+++ b/LePong/LePong.vcxproj
@@ -148,6 +148,7 @@
   <ItemGroup>
     <ClCompile Include="ball.cpp" />
     <ClCompile Include="game.cpp" />
+    <ClCompile Include="gameplay.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="constants.cpp" />
     <ClCompile Include="paddle.cpp" />
@@ -157,7 +158,9 @@
     <ClInclude Include="ball.h" />
     <ClInclude Include="constants.h" />
     <ClInclude Include="game.h" />
+    <ClInclude Include="gameplay.h" />
     <ClInclude Include="paddle.h" />
+    <ClInclude Include="player.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
