--- a/LePong/LePong.vcxproj
+++ b/LePong/LePong.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="constants.cpp" />
     <ClCompile Include="paddle.cpp" />
+    <ClCompile Include="player.cpp" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
