--- a/LePong/LePong.vcxproj.filters
+++ b/LePong/LePong.vcxproj.filters
@@ -57,6 +57,12 @@
     <ClCompile Include="credits.cpp">
       <Filter>Archivos de origen\screens</Filter>
     </ClCompile>
+    <ClCompile Include="powerUp.cpp">
+      <Filter>Archivos de origen\entities</Filter>
+    </ClCompile>
+    <ClCompile Include="timer.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="constants.h">
@@ -88,6 +94,12 @@
     </ClInclude>
     <ClInclude Include="credits.h">
       <Filter>Archivos de encabezado\screens</Filter>
+    </ClInclude>
+    <ClInclude Include="powerUp.h">
+      <Filter>Archivos de encabezado\entities</Filter>
+    </ClInclude>
+    <ClInclude Include="timer.h">
+      <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
