--- a/LePong/LePong.vcxproj.filters
+++ b/LePong/LePong.vcxproj.filters
@@ -14,92 +14,92 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
     <Filter Include="Archivos de origen\screens">
-      <UniqueIdentifier>{388adfa9-7c34-4025-90af-c13b57a7cf0f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de encabezado\screens">
-      <UniqueIdentifier>{7b0febdc-40fb-4631-842a-09c256a90f1b}</UniqueIdentifier>
+      <UniqueIdentifier>{9cfa4012-2a5d-4dcd-b1d9-9af7ba11c72c}</UniqueIdentifier>
     </Filter>
     <Filter Include="Archivos de origen\entities">
-      <UniqueIdentifier>{4d4fba4e-37a9-4d07-8ad0-00c5b72534df}</UniqueIdentifier>
+      <UniqueIdentifier>{52e5bb6e-cbf8-4013-a15f-3e13cdd038ed}</UniqueIdentifier>
     </Filter>
     <Filter Include="Archivos de encabezado\entities">
-      <UniqueIdentifier>{5823ae5c-abd4-4e92-8a5c-c0ca5f47025d}</UniqueIdentifier>
+      <UniqueIdentifier>{833119e3-037d-4f3e-bb50-1790ddf2d5ad}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de encabezado\screens">
+      <UniqueIdentifier>{4e204052-63e9-4b38-804d-27376f611aea}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="src\main.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
-    <ClCompile Include="constants.cpp">
+    <ClCompile Include="src\constants.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
-    <ClCompile Include="utils.cpp">
+    <ClCompile Include="src\game.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
-    <ClCompile Include="game.cpp">
+    <ClCompile Include="src\timer.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
-    <ClCompile Include="gameplay.cpp">
+    <ClCompile Include="src\utils.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="src\screens\credits.cpp">
       <Filter>Archivos de origen\screens</Filter>
     </ClCompile>
-    <ClCompile Include="ball.cpp">
-      <Filter>Archivos de origen\entities</Filter>
-    </ClCompile>
-    <ClCompile Include="paddle.cpp">
-      <Filter>Archivos de origen\entities</Filter>
-    </ClCompile>
-    <ClCompile Include="player.cpp">
-      <Filter>Archivos de origen\entities</Filter>
-    </ClCompile>
-    <ClCompile Include="menu.cpp">
+    <ClCompile Include="src\screens\gameplay.cpp">
       <Filter>Archivos de origen\screens</Filter>
     </ClCompile>
-    <ClCompile Include="credits.cpp">
+    <ClCompile Include="src\screens\menu.cpp">
       <Filter>Archivos de origen\screens</Filter>
     </ClCompile>
-    <ClCompile Include="powerUp.cpp">
+    <ClCompile Include="src\entities\ball.cpp">
       <Filter>Archivos de origen\entities</Filter>
     </ClCompile>
-    <ClCompile Include="timer.cpp">
-      <Filter>Archivos de origen</Filter>
+    <ClCompile Include="src\entities\paddle.cpp">
+      <Filter>Archivos de origen\entities</Filter>
+    </ClCompile>
+    <ClCompile Include="src\entities\player.cpp">
+      <Filter>Archivos de origen\entities</Filter>
+    </ClCompile>
+    <ClCompile Include="src\entities\powerUp.cpp">
+      <Filter>Archivos de origen\entities</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="constants.h">
+    <ClInclude Include="src\constants.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
-    <ClInclude Include="utils.h">
+    <ClInclude Include="src\game.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
-    <ClInclude Include="game.h">
+    <ClInclude Include="src\timer.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
-    <ClInclude Include="gameplay.h">
-      <Filter>Archivos de encabezado\screens</Filter>
-    </ClInclude>
-    <ClInclude Include="ball.h">
-      <Filter>Archivos de encabezado\entities</Filter>
-    </ClInclude>
-    <ClInclude Include="paddle.h">
-      <Filter>Archivos de encabezado\entities</Filter>
-    </ClInclude>
-    <ClInclude Include="player.h">
-      <Filter>Archivos de encabezado\entities</Filter>
-    </ClInclude>
-    <ClInclude Include="menu.h">
-      <Filter>Archivos de encabezado\screens</Filter>
-    </ClInclude>
-    <ClInclude Include="screens.h">
-      <Filter>Archivos de encabezado\screens</Filter>
-    </ClInclude>
-    <ClInclude Include="credits.h">
-      <Filter>Archivos de encabezado\screens</Filter>
-    </ClInclude>
-    <ClInclude Include="powerUp.h">
-      <Filter>Archivos de encabezado\entities</Filter>
-    </ClInclude>
-    <ClInclude Include="timer.h">
+    <ClInclude Include="src\screens.h">
       <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="src\utils.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="src\entities\ball.h">
+      <Filter>Archivos de encabezado\entities</Filter>
+    </ClInclude>
+    <ClInclude Include="src\entities\paddle.h">
+      <Filter>Archivos de encabezado\entities</Filter>
+    </ClInclude>
+    <ClInclude Include="src\entities\player.h">
+      <Filter>Archivos de encabezado\entities</Filter>
+    </ClInclude>
+    <ClInclude Include="src\entities\powerUp.h">
+      <Filter>Archivos de encabezado\entities</Filter>
+    </ClInclude>
+    <ClInclude Include="src\screens\credits.h">
+      <Filter>Archivos de encabezado\screens</Filter>
+    </ClInclude>
+    <ClInclude Include="src\screens\gameplay.h">
+      <Filter>Archivos de encabezado\screens</Filter>
+    </ClInclude>
+    <ClInclude Include="src\screens\menu.h">
+      <Filter>Archivos de encabezado\screens</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
