--- a/LePong/LePong.vcxproj
+++ b/LePong/LePong.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\screens\credits.cpp" />
+    <ClCompile Include="src\screens\draws\gameplayDraws.cpp" />
     <ClCompile Include="src\screens\gameplay.cpp" />
     <ClCompile Include="src\screens\menu.cpp" />
     <ClCompile Include="src\timer.cpp" />
@@ -41,6 +42,7 @@
     <ClInclude Include="src\game.h" />
     <ClInclude Include="src\screens.h" />
     <ClInclude Include="src\screens\credits.h" />
+    <ClInclude Include="src\screens\draws\gameplayDraws.h" />
     <ClInclude Include="src\screens\gameplay.h" />
     <ClInclude Include="src\screens\menu.h" />
     <ClInclude Include="src\timer.h" />
