--- a/LePong/LePong.vcxproj.filters
+++ b/LePong/LePong.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="src\screens\draws\gameplayDraws.cpp">
       <Filter>Archivos de origen\screens\draws</Filter>
     </ClCompile>
+    <ClCompile Include="src\screens\rules.cpp">
+      <Filter>Archivos de origen\screens</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\constants.h">
@@ -112,6 +115,9 @@
     </ClInclude>
     <ClInclude Include="src\screens\draws\gameplayDraws.h">
       <Filter>Archivos de encabezado\screens\draws</Filter>
+    </ClInclude>
+    <ClInclude Include="src\screens\rules.h">
+      <Filter>Archivos de encabezado\screens</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
